--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@ view.init( start );
 
 function upTime(){
 
-	h+=0.02;
-	if(h>24) h = 0;
-    if(h<0) h = 24;
+	if (view.sky.camera.done) {
+	
+		//h+=0.02;
+		h+=0.1;
+		if(h>24) h = 0;
+		if(h<0) h = 24;
+		
+	}
+	
 	view.updateSky( { hour:h } );
 	
 }
