--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <link rel="shortcut icon" href="favicon.ico">
 
-<script src="./build/lab.min.js"></script>
+<script src="./build/lab.js"></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@ function upTime(){
 
 	if (view.sky.camera.done) {
 	
-		h+=0.004;
+		h+=0.003;
 		//h+=0.1;
 		if(h>24) h = 0;
 		if(h<0) h = 24;
